CF-206: Fix floating label overflow

--- a/src/shared/assets/styles/components/_inputs.scss
+++ b/src/shared/assets/styles/components/_inputs.scss
@@ -84,8 +84,8 @@ select {
 }
 .vfl-label {
   padding: 0 4px;
-  top: -0.6em;
-  right: auto;
-  left: 8px;
+  top: -0.6em !important;
+  right: auto !important;
+  left: 8px !important;
   background: $white;
 }
